src/routes/layout.css
@import 'tailwindcss';
@plugin '@tailwindcss/typography';

@font-face {
	font-family: 'Inter';
	src: url('/fonts/Inter_18pt-Thin.ttf') format('truetype');
	font-weight: 100;
	font-style: normal;
}

@font-face {
	font-family: 'Inter';
	src: url('/fonts/Inter_18pt-Regular.ttf') format('truetype');
	font-weight: 400;
	font-style: normal;
}

@font-face {
	font-family: 'Inter';
	src: url('/fonts/Inter_18pt-SemiBold.ttf') format('truetype');
	font-weight: 600;
	font-style: normal;
}

@font-face {
	font-family: 'Inter';
	src: url('/fonts/Inter_18pt-Bold.ttf') format('truetype');
	font-weight: 700;
	font-style: normal;
}

@layer base {
	body {
		background: linear-gradient(135deg, #1e2127 0%, #2f323a 40%, #3a3d47 60%, #2f323a 100%);
		font-family: 'Inter', sans-serif;
	}
}

